# transcriptformer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  download_artifacts.py  finetune_lora.py  inference.py  pyproject.toml  quick.py  smoke_finetune.py
.github/workflows/: cli-tests.yml  conventional-commits.yml  publish-pypi.yml  release-please.yaml
checkpoints/tf_sapiens/: config.json
checkpoints/tf_sapiens/vocabs/: assay_vocab.json
conf/: inference_config.yaml
notebooks/: celltype-classification-across-species.ipynb  celltype-classification.ipynb
src/transcriptformer/: datasets.py  finetune_lora.py  predict.py
src/transcriptformer/cli/: __init__.py  inference.py
src/transcriptformer/cli/conf/: inference_config.yaml
src/transcriptformer/data/: dataclasses.py  dataloader.py
src/transcriptformer/model/: __init__.py  inference.py  lora.py  masks.py
src/transcriptformer/utils/: utils.py
test/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_predict_smoke.py  test_cli_smoke.py  test_compare_emb.py  test_download_artifacts.py  test_inference.py  test_smoke_dataset.py  test_smoke_finetune.py  test_smoke_lora.py  test_smoke_model.py  test_utils_data.py  utils_data.py
test/assets/: mini_ckpt.pt
test/data/: mouse_val.h5ad
