############################
#   pyproject.toml (fix)   #
############################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "transcriptformer"
version         = "0.2.1"
description     = "A transformer model for gene expression data"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  # core science stack --------------------------------------------------------
  "anndata>=0.10.5,<0.11",
  "scanpy>=1.11,<1.12",
  "scipy>=1.13",
  "numpy>=1.26",
  "pandas>=2.2",
  "h5py>=3.10",

  # modelling -----------------------------------------------------------------
  "torch>=2.5,<2.6",
  "pytorch-lightning>=2.3",

  # utilities -----------------------------------------------------------------
  "hydra-core>=1.3",
  "timeout_decorator>=0.5",
  "psutil>=5.9",
  "pynvml>=11.5",

  # AWS S3 access -------------------------------------------------------------
  "boto3>=1.33",

  # testing -------------------------------------------------------------------
  "pytest>=8",
]

[project.optional-dependencies]
build = [
  "hatch>=1.14.1",
  "twine>=6.1",
  "wheel>=0.45.1",
]

dev = [
  "pre-commit",
  "pytest==8",
]

[project.urls]
"Homepage"    = "https://github.com/czi-ai/transcriptformer"
"Bug Tracker" = "https://github.com/czi-ai/transcriptformer/issues"

[project.scripts]
transcriptformer = "transcriptformer.cli:main"

# --------------------------------------------------------------------------- #
# Hatch build config                                                          #
# --------------------------------------------------------------------------- #
[tool.hatch.build.targets.wheel]
packages = ["src/transcriptformer"]
include  = ["conf/**/*"]

# --------------------------------------------------------------------------- #
# Ruff (lint / format)                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 120
src          = ["src"]
extend-include = ["*.ipynb"]
exclude        = ["notebooks/"]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # pycodestyle errors
  "F",      # Pyflakes
  "I",      # isort
  "RUF100", # unused noqa
  "TID",    # tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

lint.ignore = [
  "B008",
  "BLE001",
  # docstring relaxations -----------------------------------------------------
  "D100","D101","D102","D103","D104","D105","D107",
  "D203","D213","D400","D401",
  # misc ----------------------------------------------------------------------
  "E501","E731","E741",
]

lint.per-file-ignores."*/__init__.py" = ["F401"]
lint.per-file-ignores."tests/*"       = ["D","F"]
lint.pydocstyle.convention            = "numpy"

# --------------------------------------------------------------------------- #
# Coverage                                                                    #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["src/transcriptformer"]
